# cosec

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug-report.md  suggestion.md
cross-files/: .gitignore  meson-kernel-clang-x86_64.cross-file
docs/: style.md
include/kernel/: kernel.h  sys_info.hpp
include/kernel/arch/x86_64/: arch.hpp
include/kernel/arch/x86_64/drivers/: hpet.hpp  pit.hpp  rtc.hpp  serials.hpp
include/kernel/arch/x86_64/system/: cpu.hpp  gdt.hpp  idt.hpp  interrupts.hpp  ioapic.hpp  lapic.hpp  pic.hpp  port.hpp  simd.hpp  system.hpp  tss.hpp
include/kernel/common/: common.hpp  list.hpp  math.h  mmio.hpp
include/kernel/console/: console.hpp
include/kernel/debug/: log.hpp
include/kernel/drivers/: acpi.hpp  drivers.hpp  framebuffer.hpp  pci.hpp  pci_bar.hpp
include/kernel/memory/: bitmap.hpp  dynamic.hpp  heap.hpp  memory.hpp  physical.hpp  virtual.hpp
include/kernel/specs/: acpi.hpp
include/kernel/tasking/: lock.hpp
include/kernel/time/: time.hpp
include/libc/: assert.h  ctype.h  errno.h  math.h  stdio.h  stdlib.h  string.h
include/libc++/: algorithm  allocator  cassert  climits  cmath  cstdarg  cstdlib  cstring  functional  iterator  limits  mutex  optional  queue  span  string  unordered_map  utils  vector
include/libc++/bits/: iterator_base.h  iterator_funcs.h
include/libc/sys/: types.h
res/: limine.cfg
src/: meson.build
src/kernel/: main.cpp  meson.build  sys_info.cpp
src/kernel/arch/x86_64/: arch.cpp  meson.build
src/kernel/arch/x86_64/drivers/: hpet.cpp  pci.cpp  pit.cpp  rtc.cpp  serials.cpp
src/kernel/arch/x86_64/memory/: virtual.cpp
src/kernel/arch/x86_64/system/: system.cpp
src/kernel/arch/x86_64/system/cpu/: cpu.cpp  simd.cpp
src/kernel/arch/x86_64/system/gdt/: gdt.asm  gdt.cpp  tss.asm  tss.cpp
src/kernel/arch/x86_64/system/interrupts/: idt.asm  idt.cpp  interrupts.asm  interrupts.cpp  pic.cpp
src/kernel/arch/x86_64/system/ioapic/: ioapic.cpp
src/kernel/arch/x86_64/system/lapic/: lapic.cpp
src/kernel/arch/x86_64/system/port/: port.cpp
src/kernel/common/: mmio.cpp
src/kernel/console/: console.cpp
src/kernel/cxx/: support.cpp
src/kernel/debug/: log.cpp
src/kernel/drivers/: acpi.cpp  drivers.cpp  framebuffer.cpp  lai.cpp  pci.cpp  pci_bar.cpp  pci_descriptors.cpp
src/kernel/libc/: assert.cpp  ctype.cpp  math.cpp  stdlib.cpp  string.cpp
src/kernel/memory/: dynamic.cpp  heap.cpp  memory.cpp  physical.cpp  virtual.cpp
src/kernel/time/: time.cpp
subprojects/: cxxshim.wrap  frigg.wrap  lai.wrap  limine.wrap  limine_terminal.wrap  ovmf_binaries.wrap  printf.wrap
subprojects/packagefiles/lai/: meson.build
subprojects/packagefiles/limine/: meson.build
subprojects/packagefiles/limine_term/: meson.build
subprojects/packagefiles/ovmf_binaries/: meson.build
subprojects/packagefiles/printf/: meson.build
