option('kernel_cflags', type: 'string', description: 'Extra C compiler flags for kernel')
option('kernel_cxxflags', type: 'string', description: 'Extra C++ compiler flags for kernel')

option('lldb_debug', type: 'boolean', value: false, description: 'Debugging')
option('lldb', type: 'boolean', value: false, description: 'debugging')